# oly-dashboard

./: README.md  competition_dashboard.py  dashboard.py  logo_b64.txt  pyproject.toml  test_dashboard.py  test_oly_data.csv
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
